@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*systemd-cron-1.3.0 (10 Sep 2014)
+
+  10 Sep 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *systemd-cron-1.2.1 (05 Jun 2014)
 
   06 Jul 2014; Martin Väth <martin@mvath.de>:
